--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -32,11 +32,11 @@
             <li>
               <a href="#para1">
                 <br class="visible-xs">Chicken</a>
-            </li>
+            </li><hr class = "visible-xs">
             <li>
               <a href="#para2">
                 <br class="visible-xs">Beef</a>
-            </li>
+            </li><hr class = "visible-xs">
             <li>
               <a href="#para3">
                 <br class="visible-xs">Sushi</a>
